From release 0.3.0:
 - Bump version number to 0.3.1-dev

From release 0.2.0:
 - Bump version number to 0.3.0
 - Different flat terrain types 
 - Blender export (faux alpha for clouds).
 - Internal changes (RGB to RGBA, overload alpha for emission)
 - Built in docs
 - Cloud layer (with Blender and POV support).
 - Render (OpenGL) background colour control

From release 0.1.0:
 - Bump version number to 0.2.0
 - Progress dialog separated and better behaved
 - Variation uses % scale for consistency (was 1/1000ths before)
 - Cosmetic changes
 - Add multiscale Perlin noise step
 - River generation faster and more reliable.
 - Subdivision enumerated as 1...levels in progress dialog (not from zero)
 - Improvements to river generation memory usage.
 - Saved povray file no longer needs colors.inc

From release 0.0.3:
 - Bump version number to 0.1.0
 - Support emissive oceans and rivers (including POV save)
 - Fix .inc filename bug (spurious ")
 - Update docs
 - Viewer to separate top-level.
 - Don't burn CPU when OpenGL area not visible.
 - Crude flight-simulator mode.  Joystick-mouse selector.
 - Save uses Qt file-picker dialog
 - Slider control of ambient
 - Amount of movement independent of FPS rate.
 - Clean up bogus files in CVS

From release 0.0.1:
 - Bump version number to 0.0.3 (0.0.2 omitted docs)
 - Add fracplanet.htm, fracplanet.css user documentation.
 - Minor changes to code (compiles on RH9)
 - Tweak doxygen.cfg 
 - Display list option
 - Frame rate display
 - VERSION and mktgz done evolvotron style

From release 0.0.0:
 - CHANGES file added.
 - lake_becomes_sea initialisation changed from 5 to 0.05 (so displays "5" on controls instead of "100").
 - Remove .qmake.internal.cache from CVS control (don't you just HATE it when that happens)
 - Move hardwired colours into ParametersTerrain class (in anticipation of control from GUI).
 - Add colour picking to GUI.
 - Bump version number to 0.0.1 (appears only in control_about.cpp)