@@ -25,77 +25,28 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 #include "useful.h"
 
-//! Abstract base class for random number generation
-class Random
-{
-protected:
-  //! Current state of random number generator.
-  uint current;
-public:
-
-  //! Constructor.  Argument is seed for random number generator.
-  Random(uint s=0)
-    :current(s)
-    {}
-
-  //! Destructor.
-  virtual ~Random()
-    {}
-  
-  //! Set seed value.
-  void seed(uint n);
-
-  //! Return a random number.
-  /*! \warning Returns double instead of float because suspect NegExp can return Inf otherwise.
-   */
-  virtual double operator()()
-    =0;
-};
+#include <boost/random.hpp>
 
 //! Generates random numbers in the range [0,1).
-class Random01 : public Random   
+class Random01
 {
-protected:
-  //!
-  /* Code straight out of Stroustrup C++ 3rd ed.
-   */
-  uint next()
-    {current=current*1103515245+12345;return (current&0x7fffffff);}
-
 public:
   // Constructor.  Argument is seed value.
-  Random01(uint s=0)
-    :Random(s){}
-
+  Random01(uint s=0);
+  
   //! Destructor.
-  virtual ~Random01()
-    {}
+  ~Random01();
   
-  // Return random number in the range [0,1).
-  virtual double operator()()
-    {return ((1.0/2147483648.0)*next());}
-};
-
-//! Return negative-exponentially distributed random numbers.
-/*! \todo Since RandomNegExp can't be considered IS-A Random01, maybe it shouldn't be derived from it.
- */
-class RandomNegExp : public Random01
-{
-protected:
-  double mean;
-public:
+  // Return random number in 0-1 (don't think we care whether open interval or not).
+  const double operator()()
+    {
+      return _gen();
+    }
   
-  //! Construct generator of numbers with mean value m, seed value s.
-  RandomNegExp(double m,uint s=0)
-    :Random01(s),mean(m){}
-
-  //! Destructor.
-  virtual ~RandomNegExp()
-    {}
-  
-  //! Return negative-ecponentially distributed random number.
-  virtual double operator()()
-    {return -mean*log(1.0-Random01::operator()());}  
+ private:
+  boost::mt19937 _rng;
+  boost::uniform_real<> _dist;
+  boost::variate_generator<boost::mt19937,boost::uniform_real<> > _gen;
 };
 
 #endif
